--- a/build.gradle
+++ b/build.gradle
@@ -1,59 +1,96 @@
 plugins {
   id "checkstyle"
-  id "jacoco"
+  id "com.adarshr.test-logger" version "1.6.0"
+  id "com.jfrog.bintray" version "1.8.4"
   id "java-library"
+  id "jacoco"
   id "maven-publish"
   id "signing"
 }
 
 group = "com.github.jlmorgan"
-version = new File("${rootDir}/.meta/VERSION").text.trim()
+version = file("${rootDir}/.meta/VERSION").text.trim()
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
-allprojects {
-  apply plugin: "checkstyle"
-  apply plugin: "jacoco"
-  apply plugin: "java-library"
+repositories {
+  jcenter()
+  mavenCentral()
+  mavenLocal()
+}
 
-  sourceCompatibility = JavaVersion.VERSION_1_8
-  targetCompatibility = JavaVersion.VERSION_1_8
+dependencies {
+  compile "org.jetbrains:annotations:15.0"
 
-  buildscript {
-    repositories {
-      mavenCentral()
-    }
+  // Test
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+  testRuntime "org.junit.jupiter:junit-jupiter-engine:5.4.2"
+  testRuntime "org.junit.platform:junit-platform-launcher:1.4.2"
+  testRuntime "org.junit.vintage:junit-vintage-engine:5.4.2"
+}
 
-    wrapper {
-      gradleVersion = "5.4.1"
-      distributionType = Wrapper.DistributionType.ALL
-    }
+wrapper {
+  gradleVersion = "5.4.1"
+  distributionType = Wrapper.DistributionType.ALL
+}
+
+test {
+  useJUnitPlatform()
+
+  jacoco {
+    classDumpDir = file("${buildDir}/jacoco/classpathdumps")
+    destinationFile = file("${buildDir}/jacoco/test.exec")
   }
 
-  dependencies {
-    compile "org.jetbrains:annotations:15.0"
-
-    // Test
-    testCompile "de.bechte.junit:junit-hierarchicalcontextrunner:4.12.2"
-    testCompile "junit:junit:5.4.2"
-    testCompile "org.hamcrest:hamcrest-library:2.1"
-    testCompile "org.mockito:mockito-core:2.27.4"
+  testLogging {
+    events "passed", "skipped", "failed"
   }
+}
 
-  repositories {
-    jcenter()
-    mavenCentral()
-    mavenLocal()
+bintray {
+  key = project.hasProperty("bintrayApiKey")
+    ? project.property("bintrayApiKey")
+    : System.getenv("BINTRAY_API_KEY")
+  user = project.hasProperty("bintrayUser")
+    ? project.property("bintrayUser")
+    : System.getenv("BINTRAY_USER")
+  publications = ["FunctionalExtras"]
+  pkg {
+    repo = "generic"
+    name = "functional-extras"
+    userOrg = "jlm"
+    licenses = ["MIT"]
+    vcsUrl = "https://github.com/jlmorgan/java-functional-extras.git"
+    labels = [
+      "combinator",
+      "compose",
+      "const",
+      "extras",
+      "flip",
+      "function",
+      "functional",
+      "identity",
+      "morphism",
+      "pipe"
+    ]
+    publicDownloadNumbers = true
   }
+}
 
-  task javadocJar(type: Jar) {
-    archiveClassifier = "javadoc"
+checkstyle {
+  toolVersion "8.20"
+}
 
-    from javadoc
-  }
+jacoco {
+  toolVersion "0.8.3"
+}
 
-  task sourcesJar(type: Jar) {
-    archiveClassifier = "sources"
-
-    from sourceSets.main.allJava
+jacocoTestReport {
+  reports {
+    csv.enabled = false
+    xml.enabled = true
+    html.destination file("${buildDir}/reports/coverage/html")
+    xml.destination file("${buildDir}/reports/coverage/coverage.xml")
   }
 }
 
@@ -63,9 +100,39 @@ javadoc {
   }
 }
 
+testlogger {
+  theme "mocha-parallel"
+  // NOTE(jlmorgan): Awaiting release of https://github.com/radarsh/gradle-test-logger-plugin.git Issue #109.
+  // showSimpleNames true
+  slowThreshold 5000
+}
+
+task coverage {
+  dependsOn test, jacocoTestReport
+}
+
+task javadocJar(type: Jar) {
+  archiveClassifier = "javadoc"
+
+  from javadoc
+}
+
+task sourcesJar(type: Jar) {
+  archiveClassifier = "sources"
+
+  from sourceSets.main.allJava
+}
+
+tasks.withType(Checkstyle) {
+  reports {
+    html.enabled true
+    xml.enabled true
+  }
+}
+
 publishing {
   publications {
-    mavenJava(MavenPublication) {
+    FunctionalExtras(MavenPublication) {
       artifactId = "functional-extras"
 
       artifact javadocJar
@@ -109,16 +176,8 @@ publishing {
       }
     }
   }
-
-  repositories {
-    maven {
-      def releasesRepoUrl = "${buildDir}/repos/releases"
-      def snapshotsRepoUrl = "${buildDir}/repos/snapshots"
-      url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
-    }
-  }
 }
 
 signing {
-  sign publishing.publications.mavenJava
+  sign publishing.publications.FunctionalExtras
 }
